# cpp-near-dupes

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json  reinstall-cmake.sh
data/: enron100k.csv.bz2  enron20k.csv.bz2  enron5.csv.bz2  enron60k.csv.bz2  rc800k.csv.bz2
src/: CMakeLists.txt  core.h  main.cpp  utils.h
src/bkp/: Similarity.cpp.old  Similarity.h.old
src/old/: Similarity.cpp  Similarity.h
